デフォルト文字列変更

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <div class="before-encoding">
                   変換前
                 <div class="content">
-                  <textarea type="text", rows="10", cols="60" id="input">PONYSRUS</textarea>
+                  <textarea type="text", rows="10", cols="60" id="input">PONYSRUS.</textarea>
                 </div>
 
               </div>
