--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
             <div class=wrap-contents>
               <div class="cnv-string">
                 <div>
-                  短音：<input type="text" size=3 value="ぽ" id="dots">
+                  短音：<input type="text" display:block size=3 value="ぽ" id="dots">
                 </div>
                 <div>
-                  長音：<input type="text" size=3 value="にー" id="dashes">
+                  長音：<input type="text" display:block size=3 value="にー" id="dashes">
                 </div>
                 <div>
-                  ピリオド：<input type="text" size=3 value="ざらす" id="period">
+                  ピリオド：<input type="text" display:block size=3 value="ざらす" id="period">
                 </div>
               </div>
 
               <div class="before-encoding">
                   変換前 ※アルファベットA-Zとピリオドのみ対応しています。
                 <div class="content">
-                  <textarea type="text", rows="3", cols="60" id="input">PONYSRUS.</textarea>
+                  <textarea type="text" display:block rows="3" cols="60" id="input">PONYSRUS.</textarea>
                 </div>
 
               </div>
@@ -50,7 +50,7 @@
               <div class="after-encogin">
                 変換後
                 <div class="content">
-                  <textarea type="text", rows="3", cols="60" id="output"></textarea>
+                  <textarea type="text" display:block rows="3" cols="60" id="output"></textarea>
                 </div>
               </div>
             </div>
@@ -59,21 +59,33 @@
         <style>
         @charset "UTF-8";
 
-        *{
-            margin-left: 5px;
-            padding: 0;
-            font-size: 16px;
 
+        *{
+          margin-left: 5px;
+          padding: 0;
+          font-size: 24px;
+        }
+
+        textarea{
+          width:90%;
         }
 
         body{
             font-family: "Open Sans","ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic ProN","メイリオ",Meiryo,"MS Pゴシック",sans-serif;
         }
 
-        @media screen and(min-width: 634px), print{
-            wrap{
+        @media screen and (min-width: 634px){
+          #dots{
+            margin: auto;
+          }
+
+          textarea{
+            width: 500px;
+          }
+
+          *{
               font-size: 16px;
-            }
+          }
         }
         </style>
 
