--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <div class="before-encoding">
                   変換前 ※アルファベットA-Zとピリオドのみ対応しています。
                 <div class="content">
-                  <textarea type="text" display:block rows="3" cols="60" id="input">PONYSRUS.</textarea>
+                  <textarea type="text" display:block rows="5" cols="60" id="input">PONYSRUS.</textarea>
                 </div>
 
               </div>
@@ -50,7 +50,7 @@
               <div class="after-encogin">
                 変換後
                 <div class="content">
-                  <textarea type="text" display:block rows="3" cols="60" id="output"></textarea>
+                  <textarea type="text" display:block rows="5" cols="60" id="output"></textarea>
                 </div>
               </div>
             </div>
@@ -63,11 +63,12 @@
         *{
           margin-left: 5px;
           padding: 0;
-          font-size: 24px;
+          font-size: 32px;
         }
 
         textarea{
           width:90%;
+          border-width: thick:
         }
 
         body{
