--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         textarea{
           width:90%;
-          border-width: thick:
+          border:2px solid black;
         }
 
         body{
