--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
           font-size: 32px;
         }
 
+        input{
+          border:2px solid black;
+        }
+
         textarea{
           width:90%;
           border:2px solid black;
