--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
           margin-bottom: 5px;
         }
 
+        input[type=checkbox]{
+          transform: scale(1.5);
+        }
+
         .cnv-string{
           margin-bottom: 15px;
         }
